--- a/src/pages/review/styles.module.scss
+++ b/src/pages/review/styles.module.scss
@@ -1,6 +1,9 @@
 .createdBy {
   color: rgb(211, 211, 211);
   font-size: 14px;
+  padding-bottom: 1rem;
+
+  border-bottom: 1px solid #818086;
 }
 
 .markdown {
