--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -27,11 +27,11 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: rgb(65, 64, 64);
 }
  
 ::-webkit-scrollbar-thumb {
-  background: #888; 
+  background: rgb(102, 102, 102); 
 }
 
 ::-webkit-scrollbar-thumb:hover {
