--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -44,19 +44,19 @@
     cursor: pointer;
   }
 
-  button {
-    padding: 5px 22px;
-    border-radius: 6px;
-    border: 2px solid rgb(209, 64, 64);
-    background: rgb(209, 64, 64);
-    color: rgb(231, 231, 231);
-    font-weight: 600;
-    transition: 0.2s;
+  // button {
+  //   padding: 5px 22px;
+  //   border-radius: 6px;
+  //   border: 2px solid rgb(209, 64, 64);
+  //   background: rgb(209, 64, 64);
+  //   color: rgb(231, 231, 231);
+  //   font-weight: 600;
+  //   transition: 0.2s;
 
-    &:hover {
-      background: transparent;
-    }
-  }
+  //   &:hover {
+  //     background: transparent;
+  //   }
+  // }
 
   a {
     margin-right: 2rem;
@@ -72,21 +72,6 @@
       background: transparent;
       color: rgb(231, 231, 231);
     }
-  }
-}
-
-.buttonLoginGithub {
-  padding: 10px 30px;
-  border-radius: 6px;
-  border: 1px solid rgb(231, 231, 231);
-  background: rgb(231, 231, 231);
-  font-weight: 700;
-  transition: 0.2s;
-  color: black;
-
-  &:hover {
-    background: transparent;
-    color: rgb(231, 231, 231);
   }
 }
 
